--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(untitled1)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(untitled1 main.cpp Item.cpp Item.h Weapon.cpp Weapon.h)
+add_executable(untitled1 main.cpp Item.cpp Item.h Weapon.cpp Weapon.h Utils.cpp Utils.h)
